--- a/css/movielist.css
+++ b/css/movielist.css
@@ -1,6 +1,6 @@
 .navbar-brand{
   font-size: 40%;
-  color: blue;
+  color: #0000ff;
   font-family: serif;
 }
 
@@ -8,16 +8,16 @@
   display: block;
   padding: 4px;
   margin-bottom: 25px;  
-  background-color: lightgray;
-  border: 1px solid black;
+  background-color: #d3d3d3;
+  border: 1px solid #000000;
   border-radius: 4px;
   min-height: 300px;
 }
 
 #container{
   padding: 4px;
-  background-color: lightgray;
-  border: 1px solid black;
+  background-color: #d3d3d3;
+  border: 1px solid #000000;
   border-radius: 4px;
 }
 
